Moving nav inside container, removes issue with nav overlapping page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,11 +11,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.content 
-{
-       padding-top: 50px;
-}
-
 .navbar
 {
        white-space: nowrap;
